Update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dm0x1/instagram-api",
+    "name": "dm0x1/ig-private-api",
     "description": "Instagram's private API for PHP",
     "license": [
         "RPL-1.5",
